--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -1,1 +1,10 @@
+block.h-diriumwall.name = Dirium Wall
+block.h-diriumwall.description = A durable defensive block, reduces enemy bullet damage.
+block.h-diriumwalllarge.name = Dirium Large Wall
+block.h-diriumwalllarge.description = A durable defensive blocks, reduces enemy bullet damage. Spans multiple tiles.
 
+block.h-tesla.name = Tesla Turret
+block.h-tesla.description = Advanced multi-target powered turret. Low damage, but fires laser beam to multiple enemies simultaneously with chain lightning.
+
+item.h-dirium.name = Dirium
+item.h-dirium.description = [description]
