--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -1,7 +1,7 @@
 block.h-diriumwall.name = Dirium Wall
-block.h-diriumwall.description = A durable defensive block, reduces enemy bullet damage.
+block.h-diriumwall.description = A durable defensive block. Reduces enemy bullet damage on hit.
 block.h-diriumwalllarge.name = Dirium Large Wall
-block.h-diriumwalllarge.description = A durable defensive blocks, reduces enemy bullet damage. Spans multiple tiles.
+block.h-diriumwalllarge.description = A durable defensive block. Reduces enemy bullet damage on hit. Spans multiple tiles.
 
 block.h-tesla.name = Tesla Turret
 block.h-tesla.description = Advanced multi-target powered turret. Low damage, but fires laser beam to multiple enemies simultaneously with chain lightning.
