Shield wall bundle.

--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -1,9 +1,11 @@
+block.h-shieldwall.name = Shield Wall
+block.h-shieldwall.description = A decent defensive block that acts as a shield. Making every bullet that hits it only deal a third of the damage.
 block.h-diriumwall.name = Dirium Wall
 block.h-diriumwall.description = A durable defensive block. Reduces enemy bullet damage on hit.
 block.h-diriumwalllarge.name = Dirium Large Wall
 block.h-diriumwalllarge.description = A durable defensive block. Reduces enemy bullet damage on hit. Spans multiple tiles.
 
-block.h-tesla.name = Tesla Turret
+block.h-tesla.name = Tesla
 block.h-tesla.description = Advanced multi-target powered turret. Low damage, but fires laser beam to multiple enemies simultaneously with chain lightning.
 
 item.h-dirium.name = Dirium
