--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -1,12 +1,15 @@
 block.h-shieldwall.name = Shield Wall
-block.h-shieldwall.description = A decent defensive block that acts as a shield. Making every bullet that hits it only deal a third of the damage.
+block.h-shieldwall.description = A decent defensive block that acts as a shield. Making every bullet that hits it only deal a third of the damage. Requires power to activate the shield. If power is non-existent, then the shield will be deactivated.
 block.h-diriumwall.name = Dirium Wall
 block.h-diriumwall.description = A durable defensive block. Reduces enemy bullet damage on hit.
 block.h-diriumwalllarge.name = Dirium Large Wall
 block.h-diriumwalllarge.description = A durable defensive block. Reduces enemy bullet damage on hit. Spans multiple tiles.
 
+block.h-shieldgen.name = Shield Generator
+block.h-shieldgen.description = A small block that generates a small shield using power. Low breakage, but the cooldown is much faster than a force projector. 
+
 block.h-tesla.name = Tesla
-block.h-tesla.description = Advanced multi-target powered turret. Low damage, but fires laser beam to multiple enemies simultaneously with chain lightning.
+block.h-tesla.description = Advanced multi-target powered turret. Low damage and radius, but fires a single laser beam to multiple enemies simultaneously with chain lightning.
 
 item.h-dirium.name = Dirium
 item.h-dirium.description = [description]
