--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -11,7 +11,7 @@ block.h-shieldgen.description = A small block that generates a small shield usin
 block.h-tesla.name = Tesla
 block.h-tesla.description = Advanced multi-target powered turret. Low damage and radius, but fires a single laser beam to multiple enemies simultaneously with chain lightning.
 block.h-pulse.name = Pulse
-block.h-pulse.description = Area-target powered turret. Disables any enemy unit in the area.
+block.h-pulse.description = Area-target powered turret. Disables any enemy unit in the area for a short time.
 
 item.h-dirium.name = Dirium
 item.h-dirium.description = [description]
