--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -1,3 +1,7 @@
+//environment
+block.h-lavaf.name = Lava Floor
+
+//walls
 block.h-shieldwall.name = Shield Wall
 block.h-shieldwall.description = A decent defensive block that acts as a shield. Making every bullet that hits it only deal a third of the damage. Requires power to activate the shield. If power is non-existent, then the shield will be deactivated.
 block.h-diriumwall.name = Dirium Wall
@@ -5,13 +9,20 @@ block.h-diriumwall.description = A durable defensive block. Reduces enemy bullet
 block.h-diriumwalllarge.name = Dirium Large Wall
 block.h-diriumwalllarge.description = A durable defensive block. Reduces enemy bullet damage on hit. Spans multiple tiles.
 
+//defense
 block.h-shieldgen.name = Shield Generator
 block.h-shieldgen.description = A small block that generates a small shield using power. Low breakage, but the cooldown is much faster than a force projector. 
 
+//turrets
 block.h-tesla.name = Tesla
 block.h-tesla.description = Advanced multi-target powered turret. Low damage and radius, but fires a single laser beam to multiple enemies simultaneously with chain lightning.
 block.h-pulse.name = Pulse
 block.h-pulse.description = Area-target powered turret. Disables weapon and movement on a group of enemy units for a short time. 
 
+//items
 item.h-dirium.name = Dirium
 item.h-dirium.description = [description]
+
+//liquids
+liquid.h-lava.name = Lava
+liquid.h-lava.description = A molten rock that has been expelled from the interior of some planets and some of their moons.
