--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -17,7 +17,7 @@ block.h-shieldgen.description = A small block that generates a small shield usin
 block.h-tesla.name = Tesla
 block.h-tesla.description = Advanced multi-target powered turret. Low damage and radius, but fires a single laser beam to multiple enemies simultaneously with chain lightning.
 block.h-pulse.name = Pulse
-block.h-pulse.description = Area-target powered turret. Disables weapon and movement on a group of enemy units for a short time. 
+block.h-pulse.description = Area-target powered turret. Disables weapon and movement on a group of enemy units for a short time and pushing them away. 
 
 //items
 item.h-dirium.name = Dirium
