--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -1,6 +1,10 @@
 //environment
 block.h-lavaf.name = Lava Floor
 
+//production
+block.h-crucible.name = Crucible
+block.h-crucible.description = [description]
+
 //walls
 block.h-shieldwall.name = Shield Wall
 block.h-shieldwall.description = A decent defensive block that acts as a shield. Making every bullet that hits it only deal a third of the damage. Requires power to activate the shield. If power is non-existent, then the shield will be deactivated.
@@ -20,6 +24,8 @@ block.h-pulse.name = Pulse
 block.h-pulse.description = Area-target powered turret. Disables weapon and movement on a group of enemy units for a short time and pushing them away. 
 
 //items
+item.h-steelh.name = Steel
+item.h-steelh.drscription = [description]
 item.h-dirium.name = Dirium
 item.h-dirium.description = [description]
 
