--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -17,11 +17,15 @@ block.h-diriumwalllarge.description = A durable defensive block. Reduces enemy b
 block.h-shieldgen.name = Shield Generator
 block.h-shieldgen.description = A small block that generates a small shield using power. Low breakage, but the cooldown is much faster than a force projector. 
 
-//turrets
+//turret
+block.h-laser.name = Laser
+block.h-laser.description = Advanced single-target powered turret. Low damage and medium radius, but can drain target's health rapidly with a laser beam.
 block.h-tesla.name = Tesla
 block.h-tesla.description = Advanced multi-target powered turret. Low damage and radius, but fires a single laser beam to multiple enemies simultaneously with chain lightning.
 block.h-pulse.name = Pulse
 block.h-pulse.description = Area-target powered turret. Disables weapon and movement on a group of enemy units for a short time and pushing them away. 
+block.h-streak.name = Streak
+block.h-streak.description = [description]
 
 //items
 item.h-steelh.name = Steel
