bundle update and category

--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -13,9 +13,12 @@ block.h-diriumwall.description = A durable defensive block. Reduces enemy bullet
 block.h-diriumwalllarge.name = Dirium Large Wall
 block.h-diriumwalllarge.description = A durable defensive block. Reduces enemy bullet damage on hit. Spans multiple tiles.
 
-//defense
+//effect
 block.h-shieldgen.name = Shield Generator
 block.h-shieldgen.description = A small block that generates a small shield using power. Low breakage, but the cooldown is much faster than a force projector. 
+block.h-end.name = Game Over Panel
+block.h-end.description = Ends current game when configured, button is available only when power requirements are met.
+
 
 //turret
 block.h-laser.name = Laser
