--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -18,7 +18,8 @@ block.h-shieldgen.name = Shield Generator
 block.h-shieldgen.description = A small block that generates a small shield using power. Low breakage, but the cooldown is much faster than a force projector. 
 block.h-end.name = Game Over Panel
 block.h-end.description = Ends current game when configured, button is available only when power requirements are met.
-
+block.h-order66.name = The Order
+block.h-order66.description = [red]"The time has come, execute order 66."[]
 
 //turret
 block.h-laser.name = Laser
