--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -15,9 +15,11 @@ block.h-diriumwalllarge.description = A durable defensive block. Reduces enemy b
 
 //effect
 block.h-shieldgen.name = Shield Generator
-block.h-shieldgen.description = A small block that generates a small shield using power. Low breakage, but the cooldown is much faster than a force projector. 
+block.h-shieldgen.description = A small block that generates a small shield using power. Low breakage, but the cooldown is much faster than a force projector.
 block.h-end.name = Game Over Panel
 block.h-end.description = Ends current game when configured, button is available only when power requirements are met.
+block.h-team.name = Team Panel
+block.h-team.description = Switches your team according to the panel's team. Click the wrench to configure the team, click the add icon to set the team. Requires power to work.
 block.h-order66.name = The Order
 block.h-order66.description = [red]"The time has come, execute order 66."[]
 
@@ -27,7 +29,7 @@ block.h-laser.description = Advanced single-target powered turret. Low damage an
 block.h-tesla.name = Tesla
 block.h-tesla.description = Advanced multi-target powered turret. Low damage and radius, but fires a single laser beam to multiple enemies simultaneously with chain lightning.
 block.h-pulse.name = Pulse
-block.h-pulse.description = Area-target powered turret. Disables weapon and movement on a group of enemy units for a short time and pushing them away. 
+block.h-pulse.description = Area-target powered turret. Disables weapon and movement on a group of enemy units for a short time and pushing them away.
 block.h-streak.name = Streak
 block.h-streak.description = [description]
 
