--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -35,7 +35,7 @@ block.h-streak.description = [description]
 
 //items
 item.h-steelh.name = Steel
-item.h-steelh.drscription = [description]
+item.h-steelh.description = [description]
 item.h-dirium.name = Dirium
 item.h-dirium.description = [description]
 
