--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -42,3 +42,7 @@ item.h-dirium.description = [description]
 //liquids
 liquid.h-lava.name = Lava
 liquid.h-lava.description = A molten rock that has been expelled from the interior of some planets and some of their moons.
+
+//units
+unit.h-summoner.name = Summoner
+unit.h-summoner.description = A strong ground unit than can summon daggers when the target is nearby and it has a chance of summoning daggers if there is no target as well.
