Early sniper bundle.

--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -28,6 +28,8 @@ block.h-laser.name = Laser
 block.h-laser.description = Advanced single-target powered turret. Low damage and medium radius, but can drain target's health rapidly with a laser beam.
 block.h-tesla.name = Tesla
 block.h-tesla.description = Advanced multi-target powered turret. Low damage and radius, but fires a single laser beam to multiple enemies simultaneously with chain lightning.
+block.h-sniper.name = Sniper
+block.h-sniper.description = [description]
 block.h-pulse.name = Pulse
 block.h-pulse.description = Area-target powered turret. Disables weapon and movement on a group of enemy units for a short time and pushing them away.
 block.h-streak.name = Streak
@@ -41,7 +43,7 @@ item.h-dirium.description = [description]
 
 //liquids
 liquid.h-lava.name = Lava
-liquid.h-lava.description = A molten rock that has been expelled from the interior of some planets and some of their moons.
+liquid.h-lava.description = A molten rock that has been expelled from the interior of some planets and some of their moons (according to Wikipedia).
 
 //units
 unit.h-summoner.name = Summoner
