Fill out empty descriptions

--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -3,7 +3,7 @@ block.h-lavaf.name = Lava Floor
 
 //production
 block.h-crucible.name = Crucible
-block.h-crucible.description = [description]
+block.h-crucible.description = Fabricates dirium from the mix of steel and titanium. Requires coal to be used as fuel.
 
 //walls
 block.h-shieldwall.name = Shield Wall
@@ -23,23 +23,23 @@ block.h-team.description = Switches your team according to the panel's team. Cli
 block.h-order66.name = The Order
 block.h-order66.description = [red]"The time has come, execute order 66."[]
 
-//turret
+//turrets
 block.h-laser.name = Laser
 block.h-laser.description = Advanced single-target powered turret. Low damage and medium radius, but can drain target's health rapidly with a laser beam.
 block.h-tesla.name = Tesla
 block.h-tesla.description = Advanced multi-target powered turret. Low damage and radius, but fires a single laser beam to multiple enemies simultaneously with chain lightning.
 block.h-sniper.name = Sniper
-block.h-sniper.description = [description]
+block.h-sniper.description = A medium-sized item turret. High damage and radius, each bullet type has it's own unique ability.
 block.h-pulse.name = Pulse
 block.h-pulse.description = Area-target powered turret. Disables weapon and movement on a group of enemy units for a short time and pushing them away.
 block.h-streak.name = Streak
-block.h-streak.description = [description]
+block.h-streak.description = A large laser cannon. Charges and fires a persistent laser beam at nearby enemies, followed by a chain of lightnings scattered everywhere. Requires coolant to operate.
 
 //items
 item.h-steelh.name = Steel
-item.h-steelh.description = [description]
+item.h-steelh.description = An alloy of iron with typically a few percent of carbon to improve its strength and fracture resistance compared to iron (according to Wikipedia).
 item.h-dirium.name = Dirium
-item.h-dirium.description = [description]
+item.h-dirium.description = A material that can be used for further advanced structure or as ammo.
 
 //liquids
 liquid.h-lava.name = Lava
