--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -25,13 +25,13 @@ block.h-order66.description = [red]"The time has come, execute order 66."[]
 
 //turrets
 block.h-laser.name = Laser
-block.h-laser.description = Advanced single-target powered turret. Low damage and medium radius, but can drain target's health rapidly with a laser beam.
+block.h-laser.description = An advanced single-target powered turret. Low damage and medium radius, but can drain target's health rapidly with a laser beam.
 block.h-tesla.name = Tesla
-block.h-tesla.description = Advanced multi-target powered turret. Low damage and radius, but fires a single laser beam to multiple enemies simultaneously with chain lightning.
+block.h-tesla.description = An advanced multi-target powered turret. Low damage and radius, but fires a single laser beam to multiple enemies simultaneously with chain lightning.
 block.h-sniper.name = Sniper
-block.h-sniper.description = A medium-sized item turret. High damage and radius, each bullet type has it's own unique ability.
+block.h-sniper.description = A medium-sized item turret. High damage, speed, accuracy, and a very long radius, each bullet type has it's own unique ability.
 block.h-pulse.name = Pulse
-block.h-pulse.description = Area-target powered turret. Disables weapon and movement on a group of enemy units for a short time and pushing them away.
+block.h-pulse.description = An area-target powered turret. Disables weapon and movement on a group of enemy units for a short time and pushing them away.
 block.h-streak.name = Streak
 block.h-streak.description = A large laser cannon. Charges and fires a persistent laser beam at nearby enemies, followed by a chain of lightnings scattered everywhere. Requires coolant to operate.
 
